# modern-software-dev-assignments-complete

./: .gitignore
week1/: chain_of_thought_complete.py  k_shot_prompting_complete.py  rag_complete.py  reflexion_complete.py  self_consistency_prompting_complete.py  tool_calling_complete.py
week2/: README.md  writeup.md
week2/app/: config.py  db.py  exceptions.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: conftest.py  test_api.py  test_extract.py
week3/: BUILD_LOG.md  README.md
week3/server/: README.md  pyproject.toml  weather.py
week3/stock-momentum/: BUILD_LOG.md  README.md
week3/stock-momentum/server/: claude_desktop_config.example.json  pyproject.toml  stock_momentum.py
