[project]
name = "stock-momentum-mcp"
version = "0.1.0"
description = "MCP server combining price technicals with crowd sentiment for a stock momentum verdict"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2",
    "yfinance>=0.2.40",
    "httpx>=0.27",
]

[project.scripts]
stock-momentum = "stock_momentum:main"

[tool.uv]
package = false
